<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/large_padding">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/large_margin"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_outline_movie_red"
        app:layout_constraintEnd_toStartOf="@+id/splash_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/Mova.H1"
        android:textColor="@color/red"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/splash_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/splash_image"
        app:layout_constraintTop_toTopOf="@+id/splash_image" />

    <TextView
        android:id="@+id/login_text"
        style="@style/Mova.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/login_text"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:startIconDrawable="@drawable/email_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_surface_with_radius_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/layoutEmail"
        app:layout_constraintStart_toStartOf="@+id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
        app:startIconDrawable="@drawable/lock_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_surface_with_radius_16"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/Mova.Button"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/sign_in"
        app:cornerRadius="@dimen/shape_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/large_margin"

        android:background="@drawable/text_ripple"
        android:gravity="center"
        android:padding="@dimen/medium_padding"
        android:text="@string/forget_the_password"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <!--region continueWith -->
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/or_continue_with"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />
    <!--endregion continueWith -->

    <ImageView
        android:id="@+id/btnSignInGoogle"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/sign_in_background"
        android:contentDescription="@string/sign_in_with_google"
        android:padding="10dp"
        android:src="@drawable/googleg_standard_color_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/txtSignUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInGoogle" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_ripple"
        android:padding="@dimen/small_padding"
        android:text="@string/sign_up"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>